@@ -11,6 +11,7 @@ Improved disassemble window: now you can export the disassemble to text file
 Fixed visual glitches in some menus when Pentagon machine and real video: audio wave, visualmem, ay piano, wave piano, view sprites
 Fixed visual glitches in some menus when interlaced enabled: audio wave, visualmem, ay piano, wave piano, view sprites
 Fixed audio bug: sending a sample to the DAC by using Next registers, it wasn’t reseting the silence detection counter, so sound would probably be frozen (and repeated again, and again...)
+Fixed autoload on tbblue (on normal and also fast boot mode)
 
 
 Version 7.1. 24 September 2018 - 5th Anniversary edition
